test: build export with compression
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -74,6 +74,34 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
+    BenchmarkBuildExportUncompressed:
+      description: Build export uncompressed
+      count: 4
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
+    BenchmarkBuildExportGzip:
+      description: Build export gzip
+      count: 4
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
+    BenchmarkBuildExportEstargz:
+      description: Build export estargz
+      count: 4
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
+#    BenchmarkBuildExportZstd:
+#      description: Build export zstd
+#      count: 4
+#      metrics:
+#        duration:
+#          description: Time (s)
+#          chart: boxplot
 
   BenchmarkDaemon:
     BenchmarkDaemonVersion:
