test: report buildkitd allocated memory
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -11,12 +11,18 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
+          chart: boxplot
     BenchmarkBuildMultistage:
       description: Multistage build
       count: 4
       metrics:
         duration:
           description: Time (s)
+          chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
           chart: boxplot
     BenchmarkBuildSecret:
       description: Build with secret
@@ -25,12 +31,18 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
+          chart: boxplot
     BenchmarkBuildRemote:
       description: Build from git context
       count: 4
       metrics:
         duration:
           description: Time (s)
+          chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
           chart: boxplot
     BenchmarkBuildHighParallelization16x:
       description: Build high parallelization (16x)
@@ -39,12 +51,18 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
+          chart: boxplot
     BenchmarkBuildHighParallelization32x:
       description: Build high parallelization (32x)
       count: 4
       metrics:
         duration:
           description: Time (s)
+          chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
           chart: boxplot
     BenchmarkBuildHighParallelization64x:
       description: Build high parallelization (64x)
@@ -53,12 +71,18 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
+          chart: boxplot
     BenchmarkBuildHighParallelization128x:
       description: Build high parallelization (128x)
       count: 4
       metrics:
         duration:
           description: Time (s)
+          chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
           chart: boxplot
     BenchmarkBuildFileTransfer:
       description: Build with substantial file transfer
@@ -67,12 +91,18 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
+          chart: boxplot
     BenchmarkBuildEmulator:
       description: Build with emulator
       count: 10
       metrics:
         duration:
           description: Time (s)
+          chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
           chart: boxplot
     BenchmarkBuildExportUncompressed:
       description: Build export uncompressed
@@ -81,12 +111,18 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
+          chart: boxplot
     BenchmarkBuildExportGzip:
       description: Build export gzip
       count: 4
       metrics:
         duration:
           description: Time (s)
+          chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
           chart: boxplot
     BenchmarkBuildExportEstargz:
       description: Build export estargz
@@ -95,13 +131,9 @@ runs:
         duration:
           description: Time (s)
           chart: boxplot
-#    BenchmarkBuildExportZstd:
-#      description: Build export zstd
-#      count: 4
-#      metrics:
-#        duration:
-#          description: Time (s)
-#          chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
+          chart: boxplot
 
   BenchmarkDaemon:
     BenchmarkDaemonVersion:
