test: cached build with file transfer
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -85,7 +85,17 @@ runs:
           description: Allocated memory (bytes)
           chart: boxplot
     BenchmarkBuildFileTransfer:
-      description: Build with substantial file transfer
+      description: Build with file transfer
+      count: 4
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
+          chart: boxplot
+    BenchmarkBuildFileTransferCachedWithIteration:
+      description: Build with file transfer (cached)
       count: 4
       metrics:
         duration:
