--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,24 @@ env:
   GO_VERSION: 1.22
   SETUP_BUILDX_VERSION: latest
   SETUP_BUILDKIT_IMAGE: moby/buildkit:latest
-  BUILDKIT_REPO: moby/buildkit
-  BUILDKIT_ARTIFACT_KEY: buildkit-binaries
   BUILDKIT_CACHE_REPO: moby/buildkit-bench-cache
-  CANDIDATES_REFS: master
-  CANDIDATES_LAST_DAYS: 15
-  CANDIDATES_LAST_RELEASES: 8
+  ##
+  BUILDKIT_REPO: moby/buildkit
+  BUILDKIT_CANDIDATES_KEY: buildkit-candidates
+  BUILDKIT_ARTIFACT_KEY: buildkit-binaries
+  BUILDKIT_CACHE_PREFIX: bkbins
+  BUILDKIT_CANDIDATES_REFS: master
+  BUILDKIT_CANDIDATES_LAST_DAYS: 15
+  BUILDKIT_CANDIDATES_LAST_RELEASES: 8
+  ##
+  BUILDX_REPO: docker/buildx
+  BUILDX_CANDIDATES_KEY: buildx-candidates
+  BUILDX_ARTIFACT_KEY: buildx-binaries
+  BUILDX_CACHE_PREFIX: bxbins
+  BUILDX_CANDIDATES_REFS: master
+  BUILDX_CANDIDATES_LAST_DAYS: 15
+  BUILDX_CANDIDATES_LAST_RELEASES: 8
+  ##
   GEN_VALIDATION_MODE: strict
   WEBSITE_PUBLIC_PATH: /buildkit-bench/
 
@@ -34,9 +46,19 @@ jobs:
     outputs:
       BUILDKIT_REPO: ${{ env.BUILDKIT_REPO }}
       BUILDKIT_ARTIFACT_KEY: ${{ env.BUILDKIT_ARTIFACT_KEY }}
-      CANDIDATES_REFS: ${{ env.CANDIDATES_REFS }}
-      CANDIDATES_LAST_DAYS: ${{ env.CANDIDATES_LAST_DAYS }}
-      CANDIDATES_LAST_RELEASES: ${{ env.CANDIDATES_LAST_RELEASES }}
+      BUILDKIT_CACHE_PREFIX: ${{ env.BUILDKIT_CACHE_PREFIX }}
+      BUILDKIT_CANDIDATES_KEY: ${{ env.BUILDKIT_CANDIDATES_KEY }}
+      BUILDKIT_CANDIDATES_REFS: ${{ env.BUILDKIT_CANDIDATES_REFS }}
+      BUILDKIT_CANDIDATES_LAST_DAYS: ${{ env.BUILDKIT_CANDIDATES_LAST_DAYS }}
+      BUILDKIT_CANDIDATES_LAST_RELEASES: ${{ env.BUILDKIT_CANDIDATES_LAST_RELEASES }}
+      ##
+      BUILDX_REPO: ${{ env.BUILDX_REPO }}
+      BUILDX_ARTIFACT_KEY: ${{ env.BUILDX_ARTIFACT_KEY }}
+      BUILDX_CACHE_PREFIX: ${{ env.BUILDX_CACHE_PREFIX }}
+      BUILDX_CANDIDATES_KEY: ${{ env.BUILDX_CANDIDATES_KEY }}
+      BUILDX_CANDIDATES_REFS: ${{ env.BUILDX_CANDIDATES_REFS }}
+      BUILDX_CANDIDATES_LAST_DAYS: ${{ env.BUILDX_CANDIDATES_LAST_DAYS }}
+      BUILDX_CANDIDATES_LAST_RELEASES: ${{ env.BUILDX_CANDIDATES_LAST_RELEASES }}
     steps:
       - run: "true"
 
@@ -85,16 +107,34 @@ jobs:
             *.cache-to=type=registry,ignore-error=true,mode=max,ref=${{ env.BUILDKIT_CACHE_REPO }}:tests-base
 
   buildkit-binaries:
-    uses: ./.github/workflows/.buildkit-binaries.yml
+    uses: ./.github/workflows/.binaries.yml
     needs:
       - get-env
     secrets: inherit
     with:
+      target: buildkit
       repo: ${{ needs.get-env.outputs.BUILDKIT_REPO }}
-      refs: ${{ needs.get-env.outputs.CANDIDATES_REFS }}
-      last_days: ${{ needs.get-env.outputs.CANDIDATES_LAST_DAYS }}
-      last_releases: ${{ needs.get-env.outputs.CANDIDATES_LAST_RELEASES }}
       artifact_key: ${{ needs.get-env.outputs.BUILDKIT_ARTIFACT_KEY }}
+      cache_prefix: ${{ needs.get-env.outputs.BUILDKIT_CACHE_PREFIX }}
+      candidates_key: ${{ needs.get-env.outputs.BUILDKIT_CANDIDATES_KEY }}
+      refs: ${{ needs.get-env.outputs.BUILDKIT_CANDIDATES_REFS }}
+      last_days: ${{ needs.get-env.outputs.BUILDKIT_CANDIDATES_LAST_DAYS }}
+      last_releases: ${{ needs.get-env.outputs.BUILDKIT_CANDIDATES_LAST_RELEASES }}
+
+  buildx-binaries:
+    uses: ./.github/workflows/.binaries.yml
+    needs:
+      - get-env
+    secrets: inherit
+    with:
+      target: buildx
+      repo: ${{ needs.get-env.outputs.BUILDX_REPO }}
+      artifact_key: ${{ needs.get-env.outputs.BUILDX_ARTIFACT_KEY }}
+      cache_prefix: ${{ needs.get-env.outputs.BUILDX_CACHE_PREFIX }}
+      candidates_key: ${{ needs.get-env.outputs.BUILDX_CANDIDATES_KEY }}
+      refs: ${{ needs.get-env.outputs.BUILDX_CANDIDATES_REFS }}
+      last_days: ${{ needs.get-env.outputs.BUILDX_CANDIDATES_LAST_DAYS }}
+      last_releases: ${{ needs.get-env.outputs.BUILDX_CANDIDATES_LAST_RELEASES }}
 
   test:
     runs-on: ubuntu-24.04
@@ -270,7 +310,7 @@ jobs:
         name: Download candidates
         uses: actions/download-artifact@v4
         with:
-          name: candidates
+          name: ${{ env.BUILDKIT_CANDIDATES_KEY }}
           path: /tmp/buildkit-bench-result
       -
         name: Set up Docker Buildx
@@ -304,6 +344,7 @@ jobs:
             *.output=./bin/report
         env:
           BAKE_ALLOW_REMOTE_FS_ACCESS: 1
+          CANDIDATES_KEY: ${{ env.BUILDKIT_CANDIDATES_KEY }}
       -
         name: Include results to report
         run: |
