handle test run scope for buildx or buildkit
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,7 +175,7 @@ jobs:
         uses: docker/bake-action@v5
         with:
           source: "{{defaultContext}}"
-          targets: tests
+          targets: tests-buildkit
           provenance: false
           set: |
             *.cache-from=type=registry,ref=${{ env.BUILDKIT_CACHE_REPO }}:tests-base
@@ -249,7 +249,7 @@ jobs:
         uses: docker/bake-action@v5
         with:
           source: "{{defaultContext}}"
-          targets: tests
+          targets: tests-buildkit
           provenance: false
           set: |
             *.cache-from=type=registry,ref=${{ env.BUILDKIT_CACHE_REPO }}:tests-base
