--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -201,17 +201,29 @@ jobs:
       target: buildkit
       artifact_key: ${{ needs.get-env.outputs.BUILDKIT_ARTIFACT_KEY }}
 
+  benchmark-buildx:
+    uses: ./.github/workflows/.benchmark.yml
+    needs:
+      - get-env
+      - prepare
+      - buildx-binaries
+    secrets: inherit
+    with:
+      target: buildx
+      artifact_key: ${{ needs.get-env.outputs.BUILDX_ARTIFACT_KEY }}
+
   report:
     runs-on: ubuntu-24.04
     needs:
       - test
       - benchmark-buildkit
+      - benchmark-buildx
     steps:
       -
         name: Download results
         uses: actions/download-artifact@v4
         with:
-          path: /tmp/buildkit-bench-result
+          path: /tmp/bench-results
           pattern: bench-results-*
           merge-multiple: true
       -
@@ -219,7 +231,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ${{ env.BUILDKIT_CANDIDATES_KEY }}
-          path: /tmp/buildkit-bench-result
+          path: /tmp/bench-results
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -233,11 +245,11 @@ jobs:
       -
         name: Create metadata files
         run: |
-          cp ./testconfig.yml /tmp/buildkit-bench-result/
-          echo "$(date +'%Y%m%d-%H%M%S')" > /tmp/buildkit-bench-result/name.txt
-          env|sort > /tmp/buildkit-bench-result/env.txt
+          cp ./testconfig.yml /tmp/bench-results/
+          echo "$(date +'%Y%m%d-%H%M%S')" > /tmp/bench-results/name.txt
+          env|sort > /tmp/bench-results/env.txt
           if [ -f "$GITHUB_EVENT_PATH" ]; then
-            cp $GITHUB_EVENT_PATH /tmp/buildkit-bench-result/gha-event.json
+            cp $GITHUB_EVENT_PATH /tmp/bench-results/gha-event.json
           fi
       -
         name: Generate HTML report
@@ -248,7 +260,7 @@ jobs:
           provenance: false
           set: |
             *.cache-from=type=registry,ref=${{ env.BUILDKIT_CACHE_REPO }}:tests-base
-            *.contexts.tests-results=cwd:///tmp/buildkit-bench-result
+            *.contexts.tests-results=cwd:///tmp/bench-results
             *.output=./bin/report
         env:
           BAKE_ALLOW_REMOTE_FS_ACCESS: 1
@@ -256,7 +268,7 @@ jobs:
       -
         name: Include results to report
         run: |
-          cp -r /tmp/buildkit-bench-result/* ./bin/report/
+          cp -r /tmp/bench-results/* ./bin/report/
       -
         name: Upload report
         uses: actions/upload-artifact@v4
@@ -284,13 +296,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: report
-          path: /tmp/buildkit-bench-report
+          path: /tmp/bench-report
       -
         name: Move reports
         run: |
-          reportDir=$(cat /tmp/buildkit-bench-report/name.txt)
+          reportDir=$(cat /tmp/bench-report/name.txt)
           mkdir -p ./website/public/result/$reportDir
-          mv /tmp/buildkit-bench-report/* ./website/public/result/$reportDir/
+          mv /tmp/bench-report/* ./website/public/result/$reportDir/
           if [ -d ./bin/gh-pages/result ]; then
             mv ./bin/gh-pages/result/* ./website/public/result/
           fi
