--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -230,8 +230,9 @@ jobs:
         name: Download candidates
         uses: actions/download-artifact@v4
         with:
-          name: ${{ env.BUILDKIT_CANDIDATES_KEY }}
           path: /tmp/bench-results
+          pattern: "*-candidates"
+          merge-multiple: true
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
