generate both buildkit and buildx reports
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/regen.yml
+++ b/.github/workflows/regen.yml
@@ -89,7 +89,8 @@ jobs:
       -
         name: Copy files
         run: |
-          find ./bin/gh-pages/result/${{ matrix.result }} -type f ! -name 'index.html' -exec cp {} ./bin/report/${{ matrix.result }}/ \;
+          rm -f ./bin/gh-pages/result/${{ matrix.result }}/index.html
+          find ./bin/gh-pages/result/${{ matrix.result }} -type f ! -name '*.html' -exec cp {} ./bin/report/${{ matrix.result }}/ \;
       -
         name: Upload report
         uses: actions/upload-artifact@v4
