scope benchmark matching project type
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -148,6 +148,7 @@ runs:
   BenchmarkDaemon:
     BenchmarkDaemonVersion:
       description: Run "buildkitd --version"
+      scope: buildkit
       count: 8
       metrics:
         duration:
@@ -155,6 +156,7 @@ runs:
           chart: boxplot
     BenchmarkDaemonSize:
       description: Daemon binary size
+      scope: buildkit
       count: 1
       metrics:
         bytes:
@@ -165,6 +167,7 @@ runs:
   BenchmarkPackage:
     BenchmarkPackageSize:
       description: Package size
+      scope: buildkit
       count: 1
       metrics:
         bytes:
@@ -175,6 +178,7 @@ runs:
   BenchmarkBuildx:
     BenchmarkBuildxVersion:
       description: Run "buildx version"
+      scope: buildx
       count: 8
       metrics:
         duration:
@@ -182,6 +186,7 @@ runs:
           chart: boxplot
     BenchmarkBuildxSize:
       description: Buildx binary size
+      scope: buildx
       count: 1
       metrics:
         bytes:
