--- a/.github/workflows/.benchmark.yml
+++ b/.github/workflows/.benchmark.yml
@@ -36,7 +36,7 @@ jobs:
         id: set
         run: |
           go run -mod=vendor ./cmd/gotestmetrics \
-            --debug list --gha-output includes
+            --debug list --project ${{ inputs.target }} --gha-output includes
 
   benchmark:
     runs-on: ubuntu-24.04
