--- a/website/package.json
+++ b/website/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@vue/cli-service": "^5.0.8",
+    "html-loader": "^5.1.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   }
