--- a/.github/workflows/regen.yml
+++ b/.github/workflows/regen.yml
@@ -12,10 +12,12 @@ on:
     paths:
       - .github/workflows/regen.yml
       - cmd/gotestmetrics/gen.go
+      - Dockerfile
   pull_request:
     paths:
       - .github/workflows/regen.yml
       - cmd/gotestmetrics/gen.go
+      - Dockerfile
 
 env:
   SETUP_BUILDX_VERSION: latest
@@ -89,7 +91,6 @@ jobs:
       -
         name: Copy files
         run: |
-          rm -f ./bin/gh-pages/result/${{ matrix.result }}/index.html
           find ./bin/gh-pages/result/${{ matrix.result }} -type f ! -name '*.html' -exec cp {} ./bin/report/${{ matrix.result }}/ \;
       -
         name: Upload report
