test: build with large file transfer
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/testconfig.yml
+++ b/testconfig.yml
@@ -104,6 +104,16 @@ runs:
         alloc:
           description: Allocated memory (bytes)
           chart: boxplot
+    BenchmarkBuildLargeFileTransfer:
+      description: Build with large file transfer
+      count: 4
+      metrics:
+        duration:
+          description: Time (s)
+          chart: boxplot
+        alloc:
+          description: Allocated memory (bytes)
+          chart: boxplot
     BenchmarkBuildEmulator:
       description: Build with emulator
       count: 10
