gen: compress logs
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -265,6 +265,9 @@ jobs:
       -
         name: Include results to report
         run: |
+          if [[ -f ./bin/report/logs.tar.gz ]] && [[ -d /tmp/bench-results/logs ]]; then
+            rm -rf /tmp/bench-results/logs
+          fi
           cp -r /tmp/bench-results/* ./bin/report/
       -
         name: Upload report
