--- a/.github/workflows/regen.yml
+++ b/.github/workflows/regen.yml
@@ -107,6 +107,15 @@ jobs:
       - gen
     steps:
       -
+        name: Free disk space
+        uses: jlumbroso/free-disk-space@54081f138730dfa15788a46383842cd2f914a1be # v1.3.1
+        with:
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          swap-storage: true
+      -
         name: Checkout
         uses: actions/checkout@v4
       -
