ci: set contents read as default workflow permissions
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#permissions
+permissions:
+  contents: read
+
 on:
   schedule:
     - cron: '0 3 * * 0' # every Sunday at 3:00 UTC
@@ -279,6 +283,9 @@ jobs:
 
   publish:
     runs-on: ubuntu-24.04
+    permissions:
+      # required to push to gh-pages
+      contents: write
     needs:
       - report
     steps:
