--- a/.github/workflows/regen.yml
+++ b/.github/workflows/regen.yml
@@ -4,6 +4,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#permissions
+permissions:
+  contents: read
+
 on:
   workflow_dispatch:
   push:
@@ -103,6 +107,9 @@ jobs:
 
   publish:
     runs-on: ubuntu-24.04
+    permissions:
+      # required to push to gh-pages
+      contents: write
     needs:
       - gen
     steps:
