ci: test pr-3033 buildx ref
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ env:
   BUILDX_CANDIDATES_KEY: buildx-candidates
   BUILDX_ARTIFACT_KEY: buildx-binaries
   BUILDX_CACHE_PREFIX: bxbins
-  BUILDX_CANDIDATES_REFS: master
+  BUILDX_CANDIDATES_REFS: master,pr-3033
   BUILDX_CANDIDATES_LAST_DAYS: 15
   BUILDX_CANDIDATES_LAST_RELEASES: 8
   ##
