testing buildkit pr-6366
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ env:
   BUILDKIT_CANDIDATES_KEY: buildkit-candidates
   BUILDKIT_ARTIFACT_KEY: buildkit-binaries
   BUILDKIT_CACHE_PREFIX: bkbins
-  BUILDKIT_CANDIDATES_REFS: master
+  BUILDKIT_CANDIDATES_REFS: master,pr-6366
   BUILDKIT_CANDIDATES_LAST_DAYS: 15
   BUILDKIT_CANDIDATES_LAST_RELEASES: 8
   ##
